# MSCDissertation

capture_core/: CMakeLists.txt  package.xml
capture_core/plugins/: CMakeLists.txt  move_unilinear.cc
capture_core/src/: core.py  excutor.py  executor_moveit.py  planner.py
dope/: dope_kinect.rviz  dope_rviz.rviz  dope_rviz_panda.rviz
dope/config/: camera_info.yaml  config_pose.yaml  kinect2_info.yaml
dope/launch/: AllinOne.launch  RunWithKinect.launch
ekf/: ekf_6d_batch_valid.m  genMeasurementCircle.m
ekf/tools/: cam2world.m  loadData.m  world2cam.m
franka_panda_description/robots/: panda.gazebo.xacro
gazebo_ros_demos/rrbot_description/urdf/: rrbot.xacro
gazebo_ros_demos/rrbot_gazebo/plugin/: CMakeLists.txt  circle_soup_can.cc  move_soup_can.cc
gazebo_ros_demos/rrbot_gazebo/worlds/: rrbot.world
panda_simulator/panda_gazebo/worlds/: panda.world
pose_recorder/: record_pose.py
